--- a/App1/App.xaml
+++ b/App1/App.xaml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- App.xaml -->
+    
 <Application
     x:Class="App1.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
