--- a/App1/App.xaml
+++ b/App1/App.xaml
@@ -1,10 +1,10 @@
 <!-- App.xaml -->
     
 <Application
-    x:Class="App1.App"
+    x:Class="WinUICalculator.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:App1">
+    xmlns:local="using:WinUICalculator">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
