--- a/App1/MainWindow.xaml
+++ b/App1/MainWindow.xaml
@@ -1,7 +1,7 @@
 <!-- MainWindow.xaml -->
     
     <Window
-    x:Class="App1.MainWindow"
+    x:Class="WinUICalculator.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
